syntax = "proto3";

message DownloadFileRequest{
    string nombre = 1;
}

message DatachunkResponse{
    bytes data = 1;
}

service AudioService{
    rpc downloadAudio (DownloadFileRequest) returns (stream DatachunkResponse);
}